{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 36,
  "lineage": "cbd01378-f669-4461-76d2-54b331edc15f",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:253650698585:loadbalancer/app/brukhy-alb/e04c0bbda40e4d9e",
            "arn_suffix": "app/brukhy-alb/e04c0bbda40e4d9e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "brukhy-alb-1488860537.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:253650698585:loadbalancer/app/brukhy-alb/e04c0bbda40e4d9e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "brukhy-alb",
            "security_groups": [
              "sg-06b90fec36c1f9689"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-023baec87d58f648e"
              },
              {
                "subnet_id": "subnet-06a52b8e9030a4c1a"
              }
            ],
            "subnets": [
              "subnet-023baec87d58f648e",
              "subnet-06a52b8e9030a4c1a"
            ],
            "tags": {
              "AutoCreateDate": "2025-07-24T16:13:21Z",
              "IAM User Name": "yurii.brukh-skillup",
              "Name": "brukhy-alb"
            },
            "tags_all": {
              "AutoCreateDate": "2025-07-24T16:13:21Z",
              "IAM User Name": "yurii.brukh-skillup",
              "Name": "brukhy-alb"
            },
            "vpc_id": "vpc-07369b567db514885",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.private_az1",
            "module.vpc.aws_subnet.private_az2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:253650698585:listener/app/brukhy-alb/e04c0bbda40e4d9e/0c774b3d9d02bfaf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:253650698585:listener/app/brukhy-alb/e04c0bbda40e4d9e/0c774b3d9d02bfaf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:253650698585:loadbalancer/app/brukhy-alb/e04c0bbda40e4d9e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.application_lb",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.private_az1",
            "module.vpc.aws_subnet.private_az2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:253650698585:listener/app/brukhy-alb/e04c0bbda40e4d9e/fa4087a5900e3ba3",
            "certificate_arn": "arn:aws:acm:us-east-1:253650698585:certificate/594642c1-3fe5-4b76-86ec-3ec97bcf52bd",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:253650698585:targetgroup/brukhy-frontend-tg/7848ec8cd7759811",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:253650698585:listener/app/brukhy-alb/e04c0bbda40e4d9e/fa4087a5900e3ba3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:253650698585:loadbalancer/app/brukhy-alb/e04c0bbda40e4d9e",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.acm.aws_acm_certificate.this",
            "module.alb.aws_lb.application_lb",
            "module.alb.aws_lb_target_group.frontend_tg",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.private_az1",
            "module.vpc.aws_subnet.private_az2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:253650698585:targetgroup/brukhy-backend-tg/622fe888955da553",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:253650698585:listener-rule/app/brukhy-alb/e04c0bbda40e4d9e/fa4087a5900e3ba3/32f13b859ac06531",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:253650698585:listener-rule/app/brukhy-alb/e04c0bbda40e4d9e/fa4087a5900e3ba3/32f13b859ac06531",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:253650698585:listener/app/brukhy-alb/e04c0bbda40e4d9e/fa4087a5900e3ba3",
            "priority": 10,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.acm.aws_acm_certificate.this",
            "module.alb.aws_lb.application_lb",
            "module.alb.aws_lb_listener.https_listener",
            "module.alb.aws_lb_target_group.backend_tg",
            "module.alb.aws_lb_target_group.frontend_tg",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.private_az1",
            "module.vpc.aws_subnet.private_az2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:253650698585:targetgroup/brukhy-backend-tg/622fe888955da553",
            "arn_suffix": "targetgroup/brukhy-backend-tg/622fe888955da553",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:253650698585:targetgroup/brukhy-backend-tg/622fe888955da553",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "brukhy-backend-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "brukhy-backend-tg"
            },
            "tags_all": {
              "Name": "brukhy-backend-tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-07369b567db514885"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:253650698585:targetgroup/brukhy-frontend-tg/7848ec8cd7759811",
            "arn_suffix": "targetgroup/brukhy-frontend-tg/7848ec8cd7759811",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:253650698585:targetgroup/brukhy-frontend-tg/7848ec8cd7759811",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "brukhy-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "brukhy-tg"
            },
            "tags_all": {
              "Name": "brukhy-tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-07369b567db514885"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:security-group/sg-06b90fec36c1f9689",
            "description": "Allow HTTPS from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b90fec36c1f9689",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "brukhy-alb-sg",
            "name_prefix": "",
            "owner_id": "253650698585",
            "revoke_rules_on_delete": false,
            "tags": {
              "AutoCreateDate": "2025-07-24T16:13:13Z",
              "IAM User Name": "yurii.brukh-skillup",
              "Name": "brukhy-alb-sg"
            },
            "tags_all": {
              "AutoCreateDate": "2025-07-24T16:13:13Z",
              "IAM User Name": "yurii.brukh-skillup",
              "Name": "brukhy-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07369b567db514885"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:security-group/sg-06735a16f24d5a246",
            "description": "Allow traffic from Frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06735a16f24d5a246",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Backend API access from frontend",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e2bf7c10ab17f14d"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "backend-sg",
            "name_prefix": "",
            "owner_id": "253650698585",
            "revoke_rules_on_delete": false,
            "tags": {
              "AutoCreateDate": "2025-07-24T16:13:27Z",
              "IAM User Name": "yurii.brukh-skillup",
              "Name": "backend-sg"
            },
            "tags_all": {
              "AutoCreateDate": "2025-07-24T16:13:27Z",
              "IAM User Name": "yurii.brukh-skillup",
              "Name": "backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07369b567db514885"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.frontend",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:security-group/sg-06109e1c5b9442b95",
            "description": "Allow PostgreSQL access from backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06109e1c5b9442b95",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from backend",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06735a16f24d5a246"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "brukhy-db-sg",
            "name_prefix": "",
            "owner_id": "253650698585",
            "revoke_rules_on_delete": false,
            "tags": {
              "AutoCreateDate": "2025-07-24T16:13:34Z",
              "IAM User Name": "yurii.brukh-skillup",
              "Name": "brukhy-db-sg"
            },
            "tags_all": {
              "AutoCreateDate": "2025-07-24T16:13:34Z",
              "IAM User Name": "yurii.brukh-skillup",
              "Name": "brukhy-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07369b567db514885"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.backend",
            "module.security_groups.aws_security_group.frontend",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:security-group/sg-0e2bf7c10ab17f14d",
            "description": "Allow traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2bf7c10ab17f14d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06b90fec36c1f9689"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "brukhy-frontend-sg",
            "name_prefix": "",
            "owner_id": "253650698585",
            "revoke_rules_on_delete": false,
            "tags": {
              "AutoCreateDate": "2025-07-24T16:13:20Z",
              "IAM User Name": "yurii.brukh-skillup",
              "Name": "brukhy-frontend-sg"
            },
            "tags_all": {
              "AutoCreateDate": "2025-07-24T16:13:20Z",
              "IAM User Name": "yurii.brukh-skillup",
              "Name": "brukhy-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07369b567db514885"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:internet-gateway/igw-037e92c66cb216bc1",
            "id": "igw-037e92c66cb216bc1",
            "owner_id": "253650698585",
            "tags": {
              "Name": "brukhy-igw"
            },
            "tags_all": {
              "Name": "brukhy-igw"
            },
            "vpc_id": "vpc-07369b567db514885"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-037e92c66cb216bc1",
            "id": "r-rtb-03167510245221ba61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03167510245221ba6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:route-table/rtb-026e3a3cf1a6ba0fc",
            "id": "rtb-026e3a3cf1a6ba0fc",
            "owner_id": "253650698585",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "brukhy-private-rt"
            },
            "tags_all": {
              "Name": "brukhy-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07369b567db514885"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:route-table/rtb-03167510245221ba6",
            "id": "rtb-03167510245221ba6",
            "owner_id": "253650698585",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "brukhy-public-rt"
            },
            "tags_all": {
              "Name": "brukhy-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07369b567db514885"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a94c934b50c20d5",
            "route_table_id": "rtb-026e3a3cf1a6ba0fc",
            "subnet_id": "subnet-023baec87d58f648e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_az1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7f8bad17f05c110",
            "route_table_id": "rtb-026e3a3cf1a6ba0fc",
            "subnet_id": "subnet-06a52b8e9030a4c1a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_az2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9bd7170477c7130",
            "route_table_id": "rtb-03167510245221ba6",
            "subnet_id": "subnet-014010e6e8da3b2b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:subnet/subnet-023baec87d58f648e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023baec87d58f648e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253650698585",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "brukhy-private_az1"
            },
            "tags_all": {
              "Name": "brukhy-private_az1"
            },
            "vpc_id": "vpc-07369b567db514885"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:subnet/subnet-06a52b8e9030a4c1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a52b8e9030a4c1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253650698585",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "brukhy-private_az2"
            },
            "tags_all": {
              "Name": "brukhy-private_az2"
            },
            "vpc_id": "vpc-07369b567db514885"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:subnet/subnet-014010e6e8da3b2b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014010e6e8da3b2b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "253650698585",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AutoCreateDate": "2025-07-24T16:13:16Z",
              "IAM User Name": "yurii.brukh-skillup",
              "Name": "brukhy-public"
            },
            "tags_all": {
              "AutoCreateDate": "2025-07-24T16:13:16Z",
              "IAM User Name": "yurii.brukh-skillup",
              "Name": "brukhy-public"
            },
            "vpc_id": "vpc-07369b567db514885"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:vpc/vpc-07369b567db514885",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-063156a083ccb6644",
            "default_route_table_id": "rtb-058009f4bd5a229d1",
            "default_security_group_id": "sg-07c9c4884bea3cd97",
            "dhcp_options_id": "dopt-0dfc30f549f1ab0c0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07369b567db514885",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-058009f4bd5a229d1",
            "owner_id": "253650698585",
            "tags": {
              "AutoCreateDate": "2025-07-24T16:12:56Z",
              "IAM User Name": "yurii.brukh-skillup",
              "Name": "brukhy-vpc"
            },
            "tags_all": {
              "AutoCreateDate": "2025-07-24T16:12:56Z",
              "IAM User Name": "yurii.brukh-skillup",
              "Name": "brukhy-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}